--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/php:7.4-stretch
+      - image: circleci/php:stretch
     steps:
       - checkout
 
