--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,12 @@
     "friendsofphp/php-cs-fixer": "^2.16",
     "guzzlehttp/guzzle": "^7.0",
     "nesbot/carbon": "^1 || ^2",
-    "symfony/options-resolver": "^5.1"
+    "phpdocumentor/reflection-docblock": "^5.2",
+    "radebatz/property-info-extras": "^1.2",
+    "symfony/options-resolver": "^5.1",
+    "symfony/property-access": "^5.1",
+    "symfony/property-info": "^5.1",
+    "symfony/serializer": "^5.1"
   },
   "require-dev": {
     "blastcloud/guzzler": "^2.0",
