--- a/composer.json
+++ b/composer.json
@@ -13,19 +13,21 @@
     }
   ],
   "require": {
-    "php": "^7.4",
+    "php": "^8.0",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "^7.0",
-    "symfony/options-resolver": "^5.1",
-    "symfony/property-access": "^5.1",
-    "symfony/serializer": "^5.1"
+    "guzzlehttp/guzzle": "^7.3",
+    "jetbrains/phpstorm-attributes": "^1.0",
+    "symfony/options-resolver": "^5.3",
+    "symfony/property-access": "^5.3",
+    "symfony/serializer": "^5.3"
   },
   "require-dev": {
     "blastcloud/guzzler": "^2.0",
-    "friendsofphp/php-cs-fixer": "^2.16",
-    "mockery/mockery": "^1.3",
-    "phpunit/phpunit": "^8.0",
-    "symfony/var-dumper": "^4.4"
+    "friendsofphp/php-cs-fixer": "^3.1",
+    "mockery/mockery": "^1.4",
+    "phpunit/phpunit": "^9.5",
+    "samsara/roster": "^0.1.5",
+    "symfony/var-dumper": "^5.3"
   },
   "autoload": {
     "psr-4": {
